--- a/init.org
+++ b/init.org
@@ -1,31 +1,31 @@
 #+title: Emacs init file
 #+author: Asilata Bapat
-#+property: header-args :tangle "~/.emacs.d/init.el"
+#+property: header-args :tangle "~/.emacs.d/init.el" :results silent
 
 * Initial boilerplate
-Define values for the top-level emacs directory (~.emacs.d~), as well as the subdirectories for optional packages and machine-local configuration.
+Define values for the top-level emacs directory (~.emacs.d~), as well as the  subdirectories for optional packages and machine-local configuration.
 #+begin_src emacs-lisp
-(require 'cl-lib)
-
-(unless (boundp 'user-emacs-directory)
-  (defvar user-emacs-directory "~/.emacs.d/"
-    "Root directory of the emacs configuration."))
-(defvar user-opt-directory (concat user-emacs-directory "opt/")
-  "User-installed Emacs packages go here.")
-(defvar local-config-directory (concat user-emacs-directory "local/")
-  "Machine-local configuration files go here.")
+  (require 'cl-lib)
+  
+  (unless (boundp 'user-emacs-directory)
+    (defvar user-emacs-directory "~/.emacs.d/"
+      "Root directory of the emacs configuration."))
+  (defvar user-opt-directory (concat user-emacs-directory "opt/")
+    "User-installed Emacs packages go here.")
+  (defvar local-config-directory (concat user-emacs-directory "local/")
+    "Machine-local configuration files go here.")
 #+end_src
 
 Create the above directories if they don't exist.
 #+begin_src emacs-lisp
-(mapc (lambda (dir)
-        (unless (file-exists-p dir)
-          (make-directory dir)))
-      (list user-emacs-directory user-opt-directory local-config-directory))
-
-(add-to-list 'load-path user-opt-directory)
-(let ((default-directory user-opt-directory))
-  (normal-top-level-add-subdirs-to-load-path))
+  (mapc (lambda (dir)
+          (unless (file-exists-p dir)
+            (make-directory dir)))
+        (list user-emacs-directory user-opt-directory local-config-directory))
+  
+  (add-to-list 'load-path user-opt-directory)
+  (let ((default-directory user-opt-directory))
+    (normal-top-level-add-subdirs-to-load-path))
 #+end_src
 
 I have forgotten why I had added the following bit of code.
@@ -40,18 +40,18 @@ I am commenting it for now and may remove it later on.
 I manage my emacs packages with [[https://github.com/raxod502/straight.el][straight]].
 First, download and bootstrap straight as per the instructions [[https://github.com/raxod502/straight.el#getting-started][here]].
 #+begin_src emacs-lisp
-(defvar bootstrap-version)
-(let ((bootstrap-file
-       (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
-      (bootstrap-version 5))
-  (unless (file-exists-p bootstrap-file)
-    (with-current-buffer
-        (url-retrieve-synchronously
-         "https://raw.githubusercontent.com/raxod502/straight.el/develop/install.el"
-         'silent 'inhibit-cookies)
-      (goto-char (point-max))
-      (eval-print-last-sexp)))
-  (load bootstrap-file nil 'nomessage))
+  (defvar bootstrap-version)
+  (let ((bootstrap-file
+         (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
+        (bootstrap-version 5))
+    (unless (file-exists-p bootstrap-file)
+      (with-current-buffer
+          (url-retrieve-synchronously
+           "https://raw.githubusercontent.com/raxod502/straight.el/develop/install.el"
+           'silent 'inhibit-cookies)
+        (goto-char (point-max))
+        (eval-print-last-sexp)))
+    (load bootstrap-file nil 'nomessage))
 #+end_src
 
 Install [[https://github.com/jwiegley/use-package][use-package]] if not installed.
@@ -102,33 +102,35 @@ At some point I had installed [[https://github.com/abo-abo/ace-window][ace-windo
 Use [[https://www.emacswiki.org/emacs/WinnerMode][winner mode]] to go back and forth between windo configurations.
 *** TODO Finish configuration
 #+begin_src emacs-lisp
-(use-package winner
-  :straight t
-  :bind (("M-<left>" . winner-undo)
-         ("M-<right>" . winner-redo))
-  :config
-  (winner-mode t))
+  (use-package winner
+    :straight t
+    :bind (("M-<left>" . winner-undo)
+           ("M-<right>" . winner-redo))
+    :config
+    (winner-mode t))
 #+end_src
 
 ** Popper
 Use [[https://github.com/karthink/popper][popper]] to manage ephemeral windows as "popups".
 #+begin_src emacs-lisp
-(use-package popper
-  :straight t
-  :bind (("C-`" . popper-toggle-latest)
-         ("M-`" . popper-cycle)
-         ("C-M-`" . popper-toggle-type))
-  :init
-  (setq popper-reference-buffers
-        '("\\*Messages\\*"
-          "Output\\*$"
-          "\\*Async Shell Command\\*"
-          "magit"
-          help-mode
-          compilation-mode))
-  (setq popper-group-function #'popper-group-by-projectile)
-  (popper-mode +1)
-  (popper-echo-mode +1))
+  (use-package popper
+    :straight t
+    :bind (("C-`" . popper-toggle-latest)
+           ("M-`" . popper-cycle)
+           ("C-M-`" . popper-toggle-type))
+    :init
+    (setq popper-reference-buffers
+          '("\\*Messages\\*"
+            "Output\\*$"
+            "\\*Apropos\\*"
+            ("\\*Async Shell Command\\*" . hide)
+            help-mode
+            compilation-mode
+            "magit-log"
+            ("magit-diff" . hide)
+            ))
+    (popper-mode +1)
+    (popper-echo-mode +1))
 #+end_src
 
 ** Miscellaneous
@@ -375,6 +377,17 @@ Use [[https://github.com/Malabarba/beacon][beacon-mode]] to show where the curso
   ;;   (beacon-mode 1))
 #+end_src
 
+
+** Highlight indent guides
+#+begin_src emacs-lisp
+    (use-package highlight-indent-guides
+      :straight t
+      :config
+      (setq highlight-indent-guides-method 'character
+            highlight-indent-guides-responsive 'top)
+      (add-hook 'prog-mode-hook 'highlight-indent-guides-mode))
+#+end_src
+
 * Editing
 #+begin_src emacs-lisp
 (use-package smartparens
@@ -481,50 +494,51 @@ Use [[https://github.com/Malabarba/beacon][beacon-mode]] to show where the curso
 (use-package browse-kill-ring
   :straight t)
 #+end_src
+
 * Minibuffer and search
 ** Ivy, etc
 #+begin_src emacs-lisp
-(use-package avy
-  :straight t
-  :bind (("M-s" . avy-goto-char-timer)))
-
-(use-package ivy
-  :straight t
-  :bind (("C-c C-r" . ivy-resume)
-         ("C-c v" . ivy-push-view)
-         ("C-c V" . ivy-pop-view))
-  :config
-  (use-package ivy-hydra :straight t)
-  (ivy-mode 1)
-  (setq ivy-use-virtual-buffers t))
-
-(use-package swiper
-  :straight t
-  :bind (("C-s" . swiper-isearch)))
-
-(use-package counsel
-  :straight t
-  :bind (("M-x" . counsel-M-x)
-         ("C-x C-f" . counsel-find-file)
-         ("C-x C-g" . counsel-git)
-         ("C-h v" . counsel-describe-variable)
-         ("C-h f" . counsel-describe-function)))
-
-(use-package ivy-prescient
-  :straight t
-  :config
-  (ivy-prescient-mode))
-
-(use-package ivy-rich
-  :straight t
-  :after ivy
-  :config
-  (ivy-set-display-transformer 'ivy-switch-buffer 'ivy-rich--ivy-switch-buffer-transformer)
-  (ivy-rich-mode 1))
-
-(use-package wgrep
-  :straight t
-  :after ivy)
+  (use-package avy
+    :straight t
+    :bind (("M-s" . avy-goto-char-timer)))
+  
+  (use-package ivy
+    :straight t
+    :bind (("C-c C-r" . ivy-resume)
+           ("C-c v" . ivy-push-view)
+           ("C-c V" . ivy-pop-view))
+    :config
+    (use-package ivy-hydra :straight t)
+    (ivy-mode 1)
+    (setq ivy-use-virtual-buffers t))
+  
+  (use-package swiper
+    :straight t
+    :bind (("C-s" . swiper-isearch)))
+  
+  (use-package counsel
+    :straight t
+    :bind (("M-x" . counsel-M-x)
+           ("C-x C-f" . counsel-find-file)
+           ("C-x C-g" . counsel-git)
+           ("C-h v" . counsel-describe-variable)
+           ("C-h f" . counsel-describe-function)))
+  
+  (use-package ivy-prescient
+    :straight t
+    :config
+    (ivy-prescient-mode))
+  
+  (use-package ivy-rich
+    :straight t
+    :after ivy
+    :config
+    (ivy-set-display-transformer 'ivy-switch-buffer 'ivy-rich--ivy-switch-buffer-transformer)
+    (ivy-rich-mode 1))
+  
+  (use-package wgrep
+    :straight t
+    :after ivy)
 #+end_src
 
 ** Other goodies
@@ -539,32 +553,48 @@ Use [[https://github.com/Malabarba/beacon][beacon-mode]] to show where the curso
   (progn (sml/setup)))
 #+end_src
 
+
+** Embark
+#+begin_src emacs-lisp
+  (use-package embark
+    :straight t
+    :bind
+    (("C-." . embark-act)
+     ("M-." . embark-dwim)
+     ("C-h B" . embark-bindings))
+    :config
+    (add-to-list 'display-buffer-alist
+                 '("\\`\\*Embark Collect \\(Live\\|Completions\\)\\*"
+                   nil
+                   (window-parameters (mode-line-format . none)))))
+#+end_src
+
 * Global keybindings
 #+begin_src emacs-lisp
-(global-set-key [f1]          'revert-buffer)
-(global-set-key [f2]          'goto-line)
-(global-set-key [f5]          'query-replace)
-(global-set-key [home]        'beginning-of-line)
-(global-set-key [end]         'end-of-line)
-(global-set-key [C-home]      'beginning-of-buffer)
-(global-set-key [C-end]       'end-of-buffer)
-(global-set-key (kbd "C-;")   'toggle-comment-line-or-region)
-(global-set-key (kbd "C-x C-j") 'jekyll-new-post)
-(global-set-key (kbd "C-c C-c M-x") 'execute-extended-command)
+  (global-set-key [f1]          'revert-buffer)
+  (global-set-key [f2]          'goto-line)
+  (global-set-key [f5]          'query-replace)
+  (global-set-key [home]        'beginning-of-line)
+  (global-set-key [end]         'end-of-line)
+  (global-set-key [C-home]      'beginning-of-buffer)
+  (global-set-key [C-end]       'end-of-buffer)
+  (global-set-key (kbd "C-;")   'toggle-comment-line-or-region)
+  ;; (global-set-key (kbd "C-x C-j") 'jekyll-new-post)
+  (global-set-key (kbd "C-c C-c M-x") 'execute-extended-command)
 #+end_src
 
 * Backup and cleanup
 ** Back up files
 #+begin_src emacs-lisp
-(setq backup-by-copying t
-      delete-old-versions t
-      kept-old-versions 2
-      kept-new-versions 2
-      version-control t)
-(setq backup-directory-alist
-      `((".*" . ,temporary-file-directory)))
-(setq auto-save-file-name-transforms
-      `((".*" ,temporary-file-directory t)))
+  (setq backup-by-copying t
+        delete-old-versions t
+        kept-old-versions 2
+        kept-new-versions 2
+        version-control t)
+  (setq backup-directory-alist
+        `((".*" . ,temporary-file-directory)))
+  (setq auto-save-file-name-transforms
+        `((".*" ,temporary-file-directory t)))
 #+end_src
 
 ** Delete old backup files
@@ -584,7 +614,7 @@ Use [[https://github.com/Malabarba/beacon][beacon-mode]] to show where the curso
 
 ** Clean up old buffers.
 #+begin_src emacs-lisp
-(use-package midnight)
+  (use-package midnight)
 #+end_src
 
 
@@ -797,13 +827,13 @@ Use [[https://github.com/Malabarba/beacon][beacon-mode]] to show where the curso
 #+end_src
 *** SCSS
 #+begin_src emacs-lisp
-(use-package scss-mode
-  :straight t
-  :mode "\\.\\(scss|sass\\)"
-  :config
-  (add-hook 'scss-mode-hook
-            (lambda ()
-              (setq scss-compile-at-save nil))))
+  (use-package scss-mode
+    :straight t
+    ;; :mode "\\.\\(scss|sass\\)"
+    :config
+    (add-hook 'scss-mode-hook
+              (lambda ()
+                (setq scss-compile-at-save nil))))
 #+end_src
 
 *** Singular
@@ -851,19 +881,20 @@ Use [[https://github.com/Malabarba/beacon][beacon-mode]] to show where the curso
 #+end_src
 
 ** Jekyll stuff (new post function, modified from hyde-mode's version)
+I don't use this anymore.
 #+begin_src emacs-lisp
-(defun jekyll-new-post (title directory)
-  "Create a new post titled TITLE in DIRECTORY."
-  (interactive "MEnter post title: \nDEnter directory to save in: ")
-  (let ((post-file-name (expand-file-name (format "%s/%s.markdown"
-                                                  directory
-                                                  (concat (format-time-string "%Y-%m-%d-") (downcase (replace-regexp-in-string " " "-" title)))))))
-    (find-file post-file-name)
-    (insert "---\n")
-    (insert (format "title: \"%s\"\n" title))
-    (insert (format "date: \"%s\"\n" (format-time-string "%Y-%m-%d %H:%M:%S %z")))
-    (insert "---\n\n")
-    (markdown-mode)))
+  ;; (defun jekyll-new-post (title directory)
+  ;;   "Create a new post titled TITLE in DIRECTORY."
+  ;;   (interactive "MEnter post title: \nDEnter directory to save in: ")
+  ;;   (let ((post-file-name (expand-file-name (format "%s/%s.markdown"
+  ;;                                                   directory
+  ;;                                                   (concat (format-time-string "%Y-%m-%d-") (downcase (replace-regexp-in-string " " "-" title)))))))
+  ;;     (find-file post-file-name)
+  ;;     (insert "---\n")
+  ;;     (insert (format "title: \"%s\"\n" title))
+  ;;     (insert (format "date: \"%s\"\n" (format-time-string "%Y-%m-%d %H:%M:%S %z")))
+  ;;     (insert "---\n\n")
+  ;;     (markdown-mode)))
 #+end_src
 
 * Email
@@ -887,34 +918,35 @@ Use [[https://github.com/Malabarba/beacon][beacon-mode]] to show where the curso
 
 ** GPG
 #+begin_src emacs-lisp
-(setq epg-gpg-program "gpg2")
+  (setq epg-gpg-program "gpg2")
 #+end_src
 
 * Elfeed
+I don't use elfeed as much as I should these days.
 #+begin_src emacs-lisp
-(use-package elfeed
-  :straight t
-  :config
-  (require 'elfeed-link)
-  (use-package elfeed-org :straight t)
-  (elfeed-org)
-  (setq rmh-elfeed-org-files '("~/.elfeed/elfeed.org"))
-  (setq elfeed-search-title-max-width 1000)
-  (setq elfeed-use-curl nil))
+  (use-package elfeed
+    :straight t
+    :config
+    (require 'elfeed-link)
+    (use-package elfeed-org :straight t)
+    (elfeed-org)
+    (setq rmh-elfeed-org-files '("~/.elfeed/elfeed.org"))
+    (setq elfeed-search-title-max-width 1000)
+    (setq elfeed-use-curl nil))
 #+end_src
 
 * PDF tools
 #+begin_src emacs-lisp
-(use-package pdf-tools
-  :straight t
-  :bind (:map pdf-view-mode-map
-              (("C-s" . isearch-forward)))
-  :config
-  (pdf-tools-install)
-  (setq-default pdf-view-display-size 'fit-width))
-
-(use-package pdf-tools-org
-  :straight (:host github :repo "machc/pdf-tools-org"))
+  (use-package pdf-tools
+    :straight t
+    :bind (:map pdf-view-mode-map
+                (("C-s" . isearch-forward)))
+    :config
+    (pdf-tools-install)
+    (setq-default pdf-view-display-size 'fit-width))
+  
+  (use-package pdf-tools-org
+    :straight (:host github :repo "machc/pdf-tools-org"))
 #+end_src
 
 
@@ -945,14 +977,24 @@ Use [[https://github.com/Malabarba/beacon][beacon-mode]] to show where the curso
              '("melpa" . "https://melpa.org/packages/"))
 #+end_src
 
+
+* Setup
+#+name: reload-init
+#+begin_src emacs-lisp :tangle no
+  (defun reload-init ()
+    (load-file user-init-file))
+#+end_src
+
+[[elisp:(reload-init)][Click to reload init file.]]
+
+# Local variables:
+# eval: (add-hook 'after-save-hook 'org-babel-tangle nil t)
+# End:
+
+
 ** Local variables
 #+begin_src emacs-lisp
   ;; Local Variables:
   ;; byte-compile-warnings: (not free-vars callargs cl-functions)  
   ;; End:
 #+end_src
-
-# Local Variables: 
-# eval: (add-hook 'after-save-hook (lambda () (if (y-or-n-p "Reload?") (load-file user-init-file))) nil t) 
-# eval: (add-hook 'after-save-hook (lambda ()(if (y-or-n-p "Tangle?")(org-babel-tangle))) nil t)
-# End:
